[package]
name = "a01_hello_hyper"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
resolver = "2"

[dependencies]
bytes = "1.8.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tokiort = {path ="crates/tokiort"}
