[package]
name = "send_file"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["client", "http1", "http2", "server"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
tokiort = {path ="../tokiort"}
